fix horizontal overflow

--- a/splash/splash.css
+++ b/splash/splash.css
@@ -1,3 +1,7 @@
+body, html {
+    overflow-x: hidden;
+}
+
 .hero {
 	position: relative;
 	height: 80vh;
